add akka notne.